--- a/ProiectMC/SQLDataBase/SQLDataBase.vcxproj
+++ b/ProiectMC/SQLDataBase/SQLDataBase.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="DBPlayerHandler.cpp" />
     <ClCompile Include="DBPlayerWithRegion.cpp" />
     <ClCompile Include="DBRegion.cpp" />
+    <ClCompile Include="GameDAO.cpp" />
     <ClCompile Include="PlayerDAO.cpp" />
     <ClCompile Include="SQLliteDataBase.cpp" />
     <ClCompile Include="TestDB.cpp" />
@@ -155,6 +156,7 @@
     <ClInclude Include="DBPlayer.h" />
     <ClInclude Include="DBPlayerWithRegion.h" />
     <ClInclude Include="DBRegion.h" />
+    <ClInclude Include="GameDAO.h" />
     <ClInclude Include="PlayerDAO.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
