--- a/ProiectMC/SQLDataBase/SQLDataBase.vcxproj.filters
+++ b/ProiectMC/SQLDataBase/SQLDataBase.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="DBPlayerWithRegion.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameDAO.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DBPlayer.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DBPlayerWithRegion.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameDAO.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
