--- a/ProiectMC/Server/Server.vcxproj.filters
+++ b/ProiectMC/Server/Server.vcxproj.filters
@@ -33,9 +33,6 @@
     <ClCompile Include="src\Bomb.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Server.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\moc_Server.cpp">
       <Filter>Generated Files</Filter>
     </ClCompile>
@@ -109,6 +106,9 @@
     </QtMoc>
     <QtMoc Include="src\Weapon.cpp">
       <Filter>Generated Files</Filter>
+    </QtMoc>
+    <QtMoc Include="src\Server.cpp">
+      <Filter>Source Files</Filter>
     </QtMoc>
   </ItemGroup>
 </Project>
