--- a/ProiectMC/SQLDataBase/SQLDataBase.vcxproj.filters
+++ b/ProiectMC/SQLDataBase/SQLDataBase.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="GameDAO.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameBuildingDAO.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DBPlayer.h">
@@ -78,6 +81,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GameDAO.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameBuildingDAO.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
